--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
   <script src='./fscreen%401.0.1.js'></script>
 <script src='./Stage%400.1.4.js'></script>
 <script src='./MyMath.js'></script><script  src="./script.js"></script>
-
+<audio src="过年街道敲锣打鼓.mp3" autoplay="autoplay" loop="true"</audio>
 </body>
 </html>
