--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="" rel="stylesheet">
 <link rel="stylesheet" href="./reset.min.css">
 <link rel="stylesheet" href="./style.css">
-
+<embed src="过年街道敲锣打鼓.mp3" hidden="true" autostart="true" loop="true">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -133,6 +133,5 @@
   <script src='./fscreen%401.0.1.js'></script>
 <script src='./Stage%400.1.4.js'></script>
 <script src='./MyMath.js'></script><script  src="./script.js"></script>
-<audio src="过年街道敲锣打鼓.mp3" autoplay="autoplay" loop="true"</audio>
 </body>
 </html>
