--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <link href="" rel="stylesheet">
 <link rel="stylesheet" href="./reset.min.css">
 <link rel="stylesheet" href="./style.css">
-<embed src="过年街道敲锣打鼓.mp3" hidden="true" autostart="true" loop="true">
 </head>
 <body>
+	
+	<audio autoplay="autoplay" loop="loop"  hidden="true" preload="auto" controls="controls"
+            src="过年街道敲锣打鼓.mp3">       
+</audio>
 <!-- partial:index.partial.html -->
 <!-- SVG Spritesheet -->
 <div style="height: 0; width: 0; position: absolute; visibility: hidden;">
