--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="js/t.js"></script>
+    <script type="text/javascript" src="t.js"></script>
     <script type="text/javascript">
         var pc_style = ""
         var browser = {
@@ -37,10 +37,10 @@
 
     <link href="http://www.gaosan.com/zt/daojishi/css/css.css" rel="stylesheet" type="text/css">
     <!--倒计时-->
-    <link rel="stylesheet" type="text/css" href="css/default.css">
-    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link rel="stylesheet" type="text/css" href="default.css">
+    <link rel="stylesheet" type="text/css" href="demo.css">
     <!--倒计时-->
-    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="jquery-2.1.1.min.js"></script>
 </head>
 
 <body>
@@ -59,8 +59,8 @@
     <div class="time_">
         <!--倒计时-->
         <div class="count_downbox">
-            <img src="img/bg1.jpg" class="img_1" alt="">
-            <img src="img/bg2.jpg" class="img_2" alt="">
+            <img src="bg1.jpg" class="img_1" alt="">
+            <img src="bg2.jpg" class="img_2" alt="">
             <div class="timebox">
                 <b class="b_box"><span id="year_span"></span> 高考倒计时</b>
                 <div class="count_down">
@@ -130,7 +130,7 @@
                 <div class="left_">
 
                     <!--<dl class="dl1">
-                        <a href="https://pan.quark.cn/s/a7b093088144"> <span><img src="img/ion_1.png" width="75" height="73" /></span>
+                        <a href="https://pan.quark.cn/s/a7b093088144"> <span><img src="ion_1.png" width="75" height="73" /></span>
                         <dt><b>历年真题</b>中考高考考研</dt>
                         <dd>静味资源已发布了第一期真题，后期再完善。</dd>
                         </a>
@@ -140,14 +140,14 @@
 
                     <dl class="dl1">
                         <a href="https://pan.quark.cn/s/cba03634e505">
-                            <span><img src="img/ion_1.png" width="75" height="73" /></span>
+                            <span><img src="ion_1.png" width="75" height="73" /></span>
                             <dt><b>全新版本</b>完全免费</dt>
                             <dd>静味资源 全新设计 学习路上 与你同行 这是4月最新的全新设计。 </dd>
                         </a>
                     </dl>
                     <dl class="dl2">
                         <a href="https://pan.quark.cn/s/140fb1df6547">
-                            <span><img src="img/ion_2.png" width="71" height="63" /></span>
+                            <span><img src="ion_2.png" width="71" height="63" /></span>
                             <dt><b>教资教案</b>特殊粉丝专区</dt>
                             <dd>
                                 这是当初为小红书专门设置的一个分享区，里面有电影、教资、教案。
@@ -156,7 +156,7 @@
                     </dl>
                     <dl class="dl3">
                         <a href="https://pan.quark.cn/s/a3c50d515fdc">
-                            <span><img src="img/ion_5.png" width="75" height="75" class="img_rr1" /></span>
+                            <span><img src="ion_5.png" width="75" height="75" class="img_rr1" /></span>
                             <dt><b>2022年</b>部分资料</dt>
                             <dd>
                                 因为夸克网盘的限制，只能分开！本来打算一起分享，但是有数量限制。这是静味最早的资料。
@@ -165,7 +165,7 @@
                     </dl>
                     <dl class="dl4">
                         <a href="https://pan.quark.cn/s/99cb4c39de75">
-                            <span><img src="img/ion_6.png" width="75" height="67" class="img_rr2" /></span>
+                            <span><img src="ion_6.png" width="75" height="67" class="img_rr2" /></span>
                             <dt><b>2023年1月</b>资料</dt>
                             <dd>
                                 因为夸克网盘的限制，只能分开！本来打算一起分享，但是有数量限制。<br />
@@ -182,7 +182,7 @@
                     <div class="qiang_ iuy"> </div>
                     <dl class="dl6">
                         <a href="https://pan.quark.cn/s/7ea44ca059cb">
-                            <span><img src="img/ion_8.png" width="68" height="70" /></span>
+                            <span><img src="ion_8.png" width="68" height="70" /></span>
                             <dt><b>2023年3月免费资料</b>4月一般开始发放专业目录和章程</dt>
                             <dd>
                                 发放《普通高等学校招生专业目录》，《招生章程》。
@@ -194,7 +194,7 @@
                     </dl>
                     <dl class="dl7">
                         <a href="https://pan.quark.cn/s/d2dac4d6acd6">
-                            <span><img src="img/ion_9.png" width="71" height="75" class="img_rr4" /></span>
+                            <span><img src="ion_9.png" width="71" height="75" class="img_rr4" /></span>
                             <dt><b>初中学科免费资料</b>5月北京上海填报高考志愿</dt>
                             <dd>
                                 部分高校会集中举行招生咨询会、
@@ -205,7 +205,7 @@
                     </dl>
                     <dl class="dl8">
                         <a href="https://pan.quark.cn/s/dfcceee243db">
-                            <span><img src="img/ion_11.png" width="69" height="65" /></span>
+                            <span><img src="ion_11.png" width="69" height="65" /></span>
                             <dt><b>高中学科免费资料</b>7月各地高招录取启动、高职志愿填报</dt>
                             <dd>
                                 高招录取工作将从本月开始<br />
@@ -218,14 +218,14 @@
                 <div class="right_">
                     <dl class="dl01">
                         <a href="http://www.gaosan.com/jianzhang/">
-                            <span><img src="img/ion_3.png" width="49" height="75" class="img_rr8" /></span>
+                            <span><img src="ion_3.png" width="49" height="75" class="img_rr8" /></span>
                             <dt><b>静味资料公众号专属资料</b>12月高考报名、高校招生简章发布</dt>
                             <dd>美术统考报名、外语口试报名、艺术特长生统测报名和体育专业考试报名；艺术特长生统一测试高校招生简章发布</dd>
                         </a>
                     </dl>
                     <dl class="dl02">
                         <a href="https://pan.quark.cn/s/cba03634e505">
-                            <span><img src="img/ion_4.png" width="75" height="55" class="img_dl_rr" /></span>
+                            <span><img src="ion_4.png" width="75" height="55" class="img_dl_rr" /></span>
                             <dt><b>11月</b>高考报名工作通知</dt>
                             <dd>
                                 高考报名时间公布；<br />
@@ -235,10 +235,10 @@
                     </dl>
                     <div class="jj qiang_01 iuy02 "> </div>
                     <dl class="dl03">
-                        <span><img src="img/ion_7.png" width="59" height="67" class="img_rr3" /></span>
+                        <span><img src="ion_7.png" width="59" height="67" class="img_rr3" /></span>
                     </dl>
                     <dl class="dl04">
-                        <span><img src="img/ion_10.png" width="57" height="75" /></span>
+                        <span><img src="ion_10.png" width="57" height="75" /></span>
                         <dt><b>6月</b><a href="https://pan.quark.cn/s/cba03634e505">高考分数线</a>、<a href="https://pan.quark.cn/s/cba03634e505">高考查分</a>、各地填报志愿</dt>
                         <dd>
                             • 高考举行<br />
@@ -255,7 +255,7 @@
                     </dl>
                     <dl class="dl05">
                         <a href="https://pan.quark.cn/s/cba03634e505">
-                            <span><img src="img/ion_12.png" width="75" height="61" class="img_rr7" /></span>
+                            <span><img src="ion_12.png" width="75" height="61" class="img_rr7" /></span>
                             <dt><b>8月</b>专科（高职）批次录取</dt>
                             <dd>
                                 本科批次录取基本在7月结束<br />
@@ -274,11 +274,11 @@
         </div>
         <div class="img_fot_">
             <dl>
-                <dt><a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652167169&idx=2&sn=bbf8d66f0898ae9cf2502971bc9b4d3b&chksm=f396309dc4e1b98b7bf1077bc1937dc1b06b7e7fcfccd69ead4678eaad577933100b8a7e10b8&token=137958206&lang=zh_CN#rd"><img src="img/M01.png" width="697" height="365" /></a></dt>
+                <dt><a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652167169&idx=2&sn=bbf8d66f0898ae9cf2502971bc9b4d3b&chksm=f396309dc4e1b98b7bf1077bc1937dc1b06b7e7fcfccd69ead4678eaad577933100b8a7e10b8&token=137958206&lang=zh_CN#rd"><img src="M01.png" width="697" height="365" /></a></dt>
 
 
                 <dd>
-                    <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652162508&idx=2&sn=887e258f23bc4aca180188c794603425&chksm=f3962550c4e1ac46a74535c08538b8fcd13b5a9569f0d4872be2c56a3647cbd13db53013ac0a&token=137958206&lang=zh_CN#rd"><img src="img/M02.png" width="503" height="215" /></a>
+                    <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652162508&idx=2&sn=887e258f23bc4aca180188c794603425&chksm=f3962550c4e1ac46a74535c08538b8fcd13b5a9569f0d4872be2c56a3647cbd13db53013ac0a&token=137958206&lang=zh_CN#rd"><img src="M02.png" width="503" height="215" /></a>
 
                     <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652162508&idx=2&sn=887e258f23bc4aca180188c794603425&chksm=f3962550c4e1ac46a74535c08538b8fcd13b5a9569f0d4872be2c56a3647cbd13db53013ac0a&token=137958206&lang=zh_CN#rd">
                         <span>
@@ -304,11 +304,11 @@
                         </a>
                         <i>2023-04-26 23:48</i>
                     </div>
-                    <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652161032&idx=2&sn=4bfc2dfb612dfcca2f9b85dfe75775b2&chksm=f3962894c4e1a182a5c0b5308d16717fb8c864d2c292fa9819e4ebf2b1f9f9058d1e276a51d2&token=137958206&lang=zh_CN#rd"><img src="img/M03.png" /></a>
+                    <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652161032&idx=2&sn=4bfc2dfb612dfcca2f9b85dfe75775b2&chksm=f3962894c4e1a182a5c0b5308d16717fb8c864d2c292fa9819e4ebf2b1f9f9058d1e276a51d2&token=137958206&lang=zh_CN#rd"><img src="M03.png" /></a>
                 </dt>
                 <dd>
                     <a href="https://mp.weixin.qq.com/s?__biz=MzIyNjA1NzcxNQ==&mid=2652161032&idx=2&sn=4bfc2dfb612dfcca2f9b85dfe75775b2&chksm=f3962894c4e1a182a5c0b5308d16717fb8c864d2c292fa9819e4ebf2b1f9f9058d1e276a51d2&token=137958206&lang=zh_CN#rd">
-                        <img src="img/M04.png" width="503" height="215" />
+                        <img src="M04.png" width="503" height="215" />
 
                         <span>
                             <h3>静味说教育 中等生如何考上985、211？</h3>
@@ -333,10 +333,7 @@
             </li>
         </ul>
     </div>
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/kinetic.js"></script>
-    <script type="text/javascript" src="js/jquery.final-countdown.js"></script>
-    <script type="text/javascript" src="js/tdx-gaosan-pc-time.min.js"></script>
+
     <script type="text/javascript">
         $('document').ready(function () {
             'use strict';
