--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="t.js"></script>
+    <script type="text/javascript" src="./t.js"></script>
     <script type="text/javascript">
         var pc_style = ""
         var browser = {
@@ -37,10 +37,10 @@
 
     <link href="http://www.gaosan.com/zt/daojishi/css/css.css" rel="stylesheet" type="text/css">
     <!--倒计时-->
-    <link rel="stylesheet" type="text/css" href="default.css">
-    <link rel="stylesheet" type="text/css" href="demo.css">
+    <link rel="stylesheet" type="text/css" href="./default.css">
+    <link rel="stylesheet" type="text/css" href="./demo.css">
     <!--倒计时-->
-    <script src="jquery-2.1.1.min.js"></script>
+    <script src="./jquery-2.1.1.min.js"></script>
 </head>
 
 <body>
