--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="keywords" content="【静味资源 完全免费 五一福利】高考倒计时日历_距离2023年高考还有多少天-静味资源">
     <meta name="description" content="【静味资源 完全免费 五一福利】高考倒计时日历_距离2023年高考还有多少天-静味资源">
 
-    <link href="http://www.gaosan.com/zt/daojishi/css/css.css" rel="stylesheet" type="text/css">
+    <link href="./css.css" rel="stylesheet" type="text/css">
     <!--倒计时-->
     <link rel="stylesheet" type="text/css" href="./default.css">
     <link rel="stylesheet" type="text/css" href="./demo.css">
